--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/css/match.css": "/css/match.css",
     "/css/home.css": "/css/home.css",
     "/css/base.css": "/css/base.css"
 }
